--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "vue-readme",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
   "author": "Kevin Peters <git.igeligel@googlemail.com>",
-  "private": true,
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js && node build/publish.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs"
-  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "dependencies": {
     "jsonp": "^0.2.1",
     "marked": "^0.3.6",
@@ -18,6 +12,7 @@
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1"
   },
+  "description": "A Vue.js project",
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
@@ -83,9 +78,13 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "name": "vue-readme",
+  "scripts": {
+    "build": "node build/build.js && node build/publish.js",
+    "dev": "node build/dev-server.js",
+    "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "test": "npm run unit",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
+  },
+  "version": "1.0.0"
 }
