--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "husky": "^0.14.3",
     "inject-loader": "^2.0.1",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
@@ -54,12 +55,14 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
+    "lint-staged": "^7.1.3",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "prettier": "^1.13.5",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "sinon": "^1.17.7",
@@ -78,11 +81,18 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
+  "lint-staged": {
+    "*.{js,json,css,md,vue}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "name": "vue-readme",
   "scripts": {
     "build": "node build/build.js && node build/publish.js",
     "dev": "node build/dev-server.js",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "precommit": "lint-staged",
     "test": "npm run unit",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
